End of Section 9

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.\\SQLEXPRESS; Initial Catalog=skistore; Integrated Security=True; MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+  },
+  "JWTSettings": {
+    "TokenKey": "this is a super duper secret key that needs to be at least 64(!) characters so take that bdhqjwgh78ikhjkt!$gj$£gghdfg768LKJ"
   }
 }
